--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Meu HelloWorld!</title>
+        <title>Curriculo</title>
     </head>
     <body>
         <h1>Hello World!<h1>
