--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Curriculo</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <header>
         <h1>Joel Awad Ayish<h1>
+        </header>
     </body>
 </html>
